crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__switcher_query_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
assertion_line: 35
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"> have it reviewed                                                              "
"                                                                                "
"⏺ reviewer(review the diff)                                                     "
"  ⎿  Running… 3 tools · 1.2k tokens                                             "
"⌕ rev▌                                                                          "
"❯ ⏺ reviewer  running · 3 tools · 1.2k tokens                                   "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"1 running                                                            fake/fake-1"
