crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__tasks_at_work_120x40.snap
---
source: crates/bingo-surface-tui/src/screens.rs
assertion_line: 50
expression: "draw_tree(120, 40, tree, ui, now)"
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                                                                  │"
"│                                                                                                                      │"
"│   /help for help · /login codex to use a subscription                                                                │"
"│   cwd: /tmp/project                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"                                                                                                                        "
"> plan it, ship it, and celebrate                                                                                       "
"                                                                                                                        "
"⏺ Bash(cargo test)                                                                                                      "
"  ⎿     Compiling bingo v0.1.0                                                                                          "
"                                                                                                                        "
"✻ Shipping it… (esc to interrupt · 1s)                                                                                  "
"  ⎿  ✔ Write the plan                                                                                                   "
"     ◼ Ship it                                                                                                          "
"     ◻ Celebrate                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · ⏎ steers · tab queues                                                                               │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                                                              fake/fake-1"
