crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__tasks_between_turns_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
assertion_line: 49
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"> plan it, ship it, and celebrate                                               "
"                                                                                "
"⏺ The plan is written; shipping next.                                           "
"                                                                                "
"  3 tasks (1 done, 1 in progress, 1 open)                                       "
"  ✔ Write the plan                                                              "
"  ◼ Ship it                                                                     "
"  ◻ Celebrate                                                                   "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
