crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__tasks_cut_to_five_120x40.snap
---
source: crates/bingo-surface-tui/src/screens.rs
assertion_line: 50
expression: "draw_tree(120, 40, tree, ui, now)"
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                                                                  │"
"│                                                                                                                      │"
"│   /help for help · /login codex to use a subscription                                                                │"
"│   cwd: /tmp/project                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"                                                                                                                        "
"> plan it, ship it, and celebrate                                                                                       "
"                                                                                                                        "
"⏺ The plan is written; shipping next.                                                                                   "
"                                                                                                                        "
"  12 tasks (1 done, 1 in progress, 10 open)                                                                             "
"  ◼ Ship it                                                                                                             "
"  ◻ Celebrate                                                                                                           "
"  ◻ Alpha                                                                                                               "
"  ◻ Bravo                                                                                                               "
"  ◻ Charlie                                                                                                             "
"  … +6 pending, 1 completed                                                                                             "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                                                        │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                                                              fake/fake-1"
